--- a/InformationWallAndroidApp/app/src/main/res/values/strings.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/strings.xml
@@ -1,16 +1,20 @@
 <resources>
-    <string name="app_name">InformationWallAndroidApp</string>
+    <string name="app_name">Information Wall</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_base">BaseActivity</string>
 
     <!--- GridViewLongClickDialog  -->
-    <string name="small">Klein</string>
-    <string name="middle">Mittel</string>
-    <string name="big">Groß</string>
+    <string name="small">Small</string>
+    <string name="middle">Middel</string>
+    <string name="big">Big</string>
+    <string name="cancelDialog">Cancel</string>
+    <string name="acceptDialog">Ok</string>
+    <string name="switch_showItem">Activate</string>
+    <string name="title">Current Tile</string>
 
-    <string name="switch_showItem">Anzeigen:</string>
+    <string name="dialog_fire_missiles">Test</string>
 
 
 </resources>
