Created Business Object for Tile Black Board and did the inital design layouts and adapters

--- a/InformationWallAndroidApp/app/src/main/res/values/strings.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/strings.xml
@@ -15,6 +15,9 @@
     <string name="title">Current Tile</string>
 
     <string name="dialog_fire_missiles">Test</string>
+    <string name="title_activity_black_board">BlackBoard</string>
 
-
+    <!--- BlackBoard  -->
+    <string name="black_board_attachment">Attachment</string>
+    <string name="black_board_description">Description</string>
 </resources>
