--- a/InformationWallAndroidApp/app/src/main/res/values/strings.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/strings.xml
@@ -29,10 +29,22 @@
     <string name="menu_black_board_save_item">Save</string>
     <string name="black_board_add_item_title">Title</string>
     <string name="black_board_add_item_date">Date</string>
-    <string name="black_board_add_item_creator">Creator</string>
+    <string name="black_board_add_item_contact">Contact</string>
+    <string name="black_board_add_item_new_contact">Create new contact</string>
     <string name="black_board_add_item_description">Description</string>
-    <string name="black_board_add_item_attachments">Attachments</string>
+    <string name="black_board_add_item_attachments">Add Attachments</string>
+    <!--- BlackBoard Add Contact -->
+    <string name="black_board_add_item_contact_full_name">Surname and Name</string>
+    <string name="black_board_add_item_contact_email">E-Mail Address</string>
+    <string name="black_board_add_item_contact_telephone">Telephone</string>
+    <string name="black_board_add_item_contact_company">Company</string>
+    <string name="black_board_add_item_contact_city">ZIP Code and City</string>
+    <string name="black_board_add_item_contact_street">Street Name and Number</string>
 
+    this.mStreetName = mStreetName;
+    this.mHouseNumber = mHouseNumber;
+    this.mZipCode = mZipCode;
+    this.mCity = mCity;
 
     <!--- Util -->
     <string name="notification_upload_progress">Upload file: </string>
