--- a/InformationWallAndroidApp/app/src/main/res/values/strings.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="black_board_attachment">Attachment</string>
     <string name="black_board_description">Description</string>
     <string name="black_board_no_description_information">No description available</string>
+    <string name="black_board_last_edited">Edited:</string>
     <!--- BlackBoard Add Item -->
     <string name="menu_black_board_save_item">Save</string>
     <string name="black_board_add_item_title">Title</string>
