Created BlackBoardItem Long click Dialog Builder and implemented Right management

--- a/InformationWallAndroidApp/app/src/main/res/values/strings.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/strings.xml
@@ -28,6 +28,10 @@
     <string name="black_board_description">Description</string>
     <string name="black_board_no_description_information">No description available</string>
     <string name="black_board_last_edited">Edited:</string>
+    <!-- BlackBoard Long Click Dialog-->
+    <string name="black_board_long_click_dialog_title">Change</string>
+    <string name="black_board_long_click_dialog_edit">EDIT ITEM</string>
+    <string name="black_board_long_click_dialog_delete">DELETE ITEM</string>
     <!--- BlackBoard Add Item -->
     <string name="menu_black_board_save_item">Save</string>
     <string name="black_board_add_item_title">Title</string>
