--- a/InformationWallAndroidApp/app/src/main/res/values/strings.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <!-- Application Titles -->
     <string name="app_name">Information Wall</string>
-    <string name="activity_black_board_title">Black Board</string>
-    <string name="activity_black_board_add_item_title">New Entry</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
@@ -21,6 +19,10 @@
     <string name="dialog_fire_missiles">Test</string>
     <string name="title_activity_black_board">BlackBoard</string>
     <!--- BlackBoard  -->
+    <string name="activity_black_board_title">Black Board</string>
+    <string name="activity_black_board_add_item_title">New Entry</string>
+    <string name="activity_black_board_edit_item_title">Edit Entry</string>
+
     <string name="black_board_no_title">No Title</string>
     <string name="black_board_no_item_information">No Item Information</string>
     <string name="black_board_attachment">Attachment</string>
