--- a/InformationWallAndroidApp/app/src/main/res/values/strings.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="black_board_add_item_description">Description</string>
     <string name="black_board_add_item_attachments">ADD ATTACHMENT</string>
 
+    <string name="black_board_add_item_snackbar_connection_error">Entry was not uploaded to the server</string>
     <string name="black_board_add_item_snackbar_no_title">Please enter at least the title</string>
     <string name="black_board_add_item_snackbar_upload_in_progress">Please wait until the upload is finished</string>
     <string name="black_board_add_item_snackbar_upload_failure">Ups! Something went wrong</string>
