--- a/InformationWallAndroidApp/app/src/main/res/values/strings.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="log_in_title">Information Wall</string>
     <string name="log_in_overview_title">Select Account</string>
     <string name="fragment_account_overview_title">Account Overview</string>
+    <string name="fragment_account_overview_new_account">NEW ACCOUNT</string>
     <string name="fragment_account_log_in_title">Log in</string>
 
     <!--- GridViewLongClickDialog  -->
