Fixed PagerAdapter and added new Icons for preview

--- a/InformationWallAndroidApp/app/src/main/res/values/strings.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
     <string name="action_about">About</string>
+
     <!-- LogIn -->
     <string name="login_authenticating_progress_bar">Authenticating...</string>
     <string name="log_in_failed">Log in failed</string>
@@ -66,7 +67,11 @@
     <string name="black_board_add_item_contact_company">Company</string>
     <string name="black_board_add_item_contact_city">ZIP Code and City</string>
     <string name="black_board_add_item_contact_street">Street Name and Number</string>
-
+    <!-- Blackboard change layout -->
+    <string name="blackboard_layout_text_only">Information only</string>
+    <string name="blackboard_layout_document">Attachment only</string>
+    <string name="blackboard_layout_document_and_info">Attachment And Information</string>
+    <string name="blackboard_layout_save">SAVE</string>
     <!--- Util -->
     <string name="notification_upload_progress">Upload file: </string>
     <string name="notification_upload">Upload in progress</string>
