--- a/InformationWallAndroidApp/app/src/main/res/values/strings.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/strings.xml
@@ -83,6 +83,9 @@
     <string name="pref_pushNoti">Push Notification</string>
     <string name="pref_pushNoti_summary">Enable it to receive push notifications</string>
 
+    <string name="pref_animation">Animation</string>
+    <string name="pref_animation_summary">Enable animation on the Information Wall Screen</string>
+
 
 
 
