add openBlackBoardonServer to Utils class

--- a/InformationWallAndroidApp/app/src/main/res/values/strings.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/strings.xml
@@ -87,6 +87,8 @@
     <string name="pref_animation">Animation</string>
     <string name="pref_animation_summary">Enable animation on the Information Wall Screen</string>
 
+    <string name="pref_animation_key">pref_animation</string>
+
 
 
 
