--- a/InformationWallAndroidApp/app/src/main/res/values/strings.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/strings.xml
@@ -44,10 +44,7 @@
     <string name="black_board_description">Description</string>
     <string name="black_board_no_description_information">No description available</string>
     <string name="black_board_last_edited">Edited:</string>
-    <!-- BlackBoard Overview Long Click Dialog-->
-    <string name="black_board_long_click_dialog_edit">EDIT</string>
-    <string name="black_board_long_click_dialog_delete">DELETE</string>
-    <!--- BlackBoard Add Item -->
+    <!-- BlackBoard Add Item -->
     <string name="menu_black_board_save_item">Save</string>
     <string name="black_board_add_item_title">Title</string>
     <string name="black_board_add_item_contact">Search Contact</string>
@@ -57,9 +54,7 @@
     <string name="black_board_add_layout">CHANGE LAYOUT</string>
 
     <string name="black_board_add_item_snackbar_connection_error">Entry was not uploaded to the server</string>
-    <string name="black_board_add_item_snackbar_no_title">Please enter at least the title</string>
-    <string name="black_board_add_item_snackbar_upload_in_progress">Please wait until the upload is finished</string>
-    <string name="black_board_add_item_snackbar_upload_failure">Ups! Something went wrong</string>
+    <string name="blackboard_add_item_validate_no_title">Please enter at least the title</string>
     <!--- BlackBoard Add Contact -->
     <string name="black_board_add_item_contact_full_name">Surname and Name</string>
     <string name="black_board_add_item_contact_email">E-Mail Address</string>
@@ -67,6 +62,11 @@
     <string name="black_board_add_item_contact_company">Company</string>
     <string name="black_board_add_item_contact_city">ZIP Code and City</string>
     <string name="black_board_add_item_contact_street">Street Name and Number</string>
+    <!-- Blackboard choose Attachment Type -->
+    <string name="dialog_blackboard_add_attachment_title">Attachment Type</string>
+    <!-- Blackboard choose Attachment Type -->
+    <string name="dialog_blackboard_add_web_attachment_title">Web Attachment</string>
+    <string name="dialog_blackboard_add_web_attachment_hint">Web URL</string>
     <!-- Blackboard change layout -->
     <string name="blackboard_layout_text_only">Information only</string>
     <string name="blackboard_layout_document">Attachment only</string>
@@ -88,7 +88,11 @@
 
     <string name="pref_animation_key">pref_animation</string>
 
-
+    <!-- Other Strings -->
+    <string name="edit">EDIT</string>
+    <string name="delete">DELETE</string>
+    <string name="web_link">WEB LINK</string>
+    <string name="local_device">LOCAL DEVICE</string>
 
 
 
