--- a/InformationWallAndroidApp/app/src/main/res/values/strings.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/strings.xml
@@ -10,7 +10,8 @@
     <string name="action_about">About</string>
 
     <!-- General -->
-    <string name="new_blackboard_item_notification">A new Blackboard Item was Uploaded</string>
+    <string name="new_blackboard_item_notification">New Blackboard Item</string>
+    <string name="go_to_overview_notification">OVERVIEW</string>
 
     <!-- LogIn -->
     <string name="login_authenticating_progress_bar">Authenticating...</string>
