--- a/InformationWallAndroidApp/app/src/main/res/values/strings.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <!-- General -->
     <string name="new_blackboard_item_notification_title">New Blackboard Item</string>
     <string name="go_to_overview_notification">OVERVIEW</string>
+    <string name="undo_delete_items">Item(s) deleted</string>
+    <string name="undo_delete">UNDO</string>
 
     <!-- LogIn -->
     <string name="login_authenticating_progress_bar">Authenticating...</string>
